--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "daisyui": "^3.9.3",
     "dotenv": "^16.3.1",
     "framer-motion": "10.12.16",
     "install": "^0.13.0",
